--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,26 +19,26 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "numpy==1.23.5",
+    "numpy==1.26.4",
     "spatialmath-python==1.1.9",
     "prompt-toolkit==3.0.36",
     "ipython<=8.17.2",
-    "trimesh==4.3.2",
-    "open3d==0.18.0",
+    "trimesh>=4.3.2",
+    "open3d>=0.18.0",
     "numba<=0.59.1",
     "zarr<=2.17.2",
     "matplotlib<=3.8.4",
-    "torch<=2.1.2",
-    "torchvision<=0.16.2",
+    "torch>=2.1.2",
+    "torchvision>=0.16.2",
     "einops==0.7.0",
     "diffusers==0.27.2",
-    "composer<=0.21.3",
+    "composer>=0.21.3",
     "hydra-core==1.3.2",
     "wandb<=0.17.3",
     # "av==8.1.0",
     "av==14.3.0",
     "yourdfpy==0.0.56",
-    "geomstats[pytorch]==2.7.0",
+    "geomstats[pytorch]==2.8.0",
     "imagecodecs"
 ]
 
