--- a/conf/backbone/pointnet2.yaml
+++ b/conf/backbone/pointnet2.yaml
@@ -1,20 +1,24 @@
 _target_: pfp.backbones.pointnet2.PointNet2Backbone
 embed_dim: ${obs_features_dim}
-input_channels: "${eval: '6 if ${dataset.use_pc_color} else 3'}"
 n_points: ${dataset.n_points}
 use_group_norm: False
 # Optional: customize SA layer configurations
 sa_configs:
-  - npoints: 512  # 改为 npoints (复数)
-    radius: 0.02
-    nsample: 32
+  - npoints: 1024  # 改为 npoints (复数)
+    radius: 0.08
+    nsample: 64
     mlp: [64, 64, 128]
-    in_channel: 6  # 添加 in_channel 字段（根据 input_channels 决定，3 或 6）
-  - npoints: 128  # 改为 npoints (复数)
-    radius: 0.5
+    in_channel: 3
+  - npoints: 512  # 改为 npoints (复数)
+    radius: 0.10
     nsample: 32
     mlp: [128, 128, 256]
-    in_channel: 131  # 添加 in_channel 字段（128+3，因为上一层输出128维特征+3维xyz）
+    in_channel: 131
+  - npoints: 256 # 改为 npoints (复数)
+    radius: 0.20
+    nsample: 16
+    mlp: [128, 128, 256]
+    in_channel: 259  # 添加 in_channel 字段（128+3，因为上一层输出128维特征+3维xyz）
   - npoints: null  # 改为 npoints (复数)，group_all
     radius: null
     nsample: null
