--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -28,20 +28,20 @@ dataset:
   n_points: 4096
 
 dataloader:
-  batch_size: 64
+  batch_size: 128
   num_workers: 0
   # pin_memory: True
 
 optimizer:
   _target_: torch.optim.AdamW
-  lr: 3.0e-5
-  betas: [0.95, 0.999]
-  eps: 1.0e-8
-  weight_decay: 1.0e-6
+  lr: 3.0e-5 #3.0e-5
+  betas: [0.95, 0.999] # [0.95, 0.999]
+  eps: 1.0e-8 # 1.0e-8
+  weight_decay: 1.0e-6 # 1.0e-6
 
 lr_scheduler:
   name: cosine # constant | cosine | linear | ...
-  num_warmup_steps: 5000
+  num_warmup_steps: 5000 #5000
 
 defaults:
   - model: flow
